@@ -36,6 +36,7 @@ enum
 	COL_CPU,
 	COL_NICE,
 	COL_PID,
+	COL_SECURITYCONTEXT,
 	COL_PIXBUF,
 	COL_POINTER,
 	NUM_COLUMNS
