@@ -1,5 +1,17 @@
 2004-11-13  Benoît Dejean  <tazforever@dlfp.org>
 
+	* configure.in:
+	* src/Makefile.am:
+	* src/procman.h:
+	* src/proctable.c: (can_show_security_context_column),
+	(get_selinux_context), (proctable_new), (proctable_free_info),
+	(insert_info_to_tree), (update_info), (get_info):
+	* src/proctable.h: Merged David Malcolm  <david@davemalcolm.demon.co.uk>
+	SELinux Security Context patch. Thanks :)
+	New configure option: --enable-selinux
+
+2004-11-13  Benoît Dejean  <tazforever@dlfp.org>
+
 	* configure.in: Bumped version.
 
 2004-11-12  Benoît Dejean  <tazforever@dlfp.org>
